<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222020"
    android:padding="20dp"
    tools:context=".WeatherDetails">

    <TextView
        android:id="@+id/txvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/name_city_details"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvTempDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:text="@string/temp_details"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txvDescriptionDetails"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvCity" />

    <TextView
        android:id="@+id/txvDescriptionDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/description_details"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txvTempDetails"
        app:layout_constraintTop_toBottomOf="@+id/txvCity" />

    <LinearLayout
        android:id="@+id/lnFeelslike"
        android:layout_width="0dp"
        android:layout_height="129dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/items_weather_details"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/lnHumidity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvCity">




        <TextView
            android:id="@+id/txvFeelsLikeTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feels_like_tittle"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txvfeelsLike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/feels_like_value"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnHumidity"
        android:layout_width="0dp"
        android:layout_height="129dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/items_weather_details"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lnFeelslike"
        app:layout_constraintTop_toBottomOf="@+id/txvCity">

        <TextView
            android:id="@+id/txvHumidityTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/humidity_title"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txvHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/value_humidity"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnHRain"
        android:layout_width="0dp"
        android:layout_height="129dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/items_weather_details"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/lnHRangeTemp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnFeelslike">

        <TextView
            android:id="@+id/txvPressureTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressure_title"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="115dp"
            tools:layout_editor_absoluteY="524dp" />

        <TextView
            android:id="@+id/txvPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/value_pressure"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="448dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnHRangeTemp"
        android:layout_width="0dp"
        android:layout_height="129dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/items_weather_details"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lnHRain"
        app:layout_constraintTop_toBottomOf="@+id/lnFeelslike">

        <TextView
            android:id="@+id/txvTempMinTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_min_tittle"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="115dp"
            tools:layout_editor_absoluteY="524dp" />

        <TextView
            android:id="@+id/txvTempMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/temp_min_value"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="448dp" />

        <TextView
            android:id="@+id/txvTempMaxTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/temp_max_tittle"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txvTempMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/temp_max_value"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lnVisibility"
        android:layout_width="0dp"
        android:layout_height="129dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/items_weather_details"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnHRangeTemp">

        <TextView
            android:id="@+id/txvVisibilityTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visibility_title"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="115dp"
            tools:layout_editor_absoluteY="524dp" />

        <TextView
            android:id="@+id/txvVisibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/visibility_value"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="448dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgAdd"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_control_point" />

    <ImageView
        android:id="@+id/imgList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_lis" />


</androidx.constraintlayout.widget.ConstraintLayout>